@@ -1,7 +1,7 @@
 import zope.schema
 import z3c.form.interfaces
 
-class IKeywordWidget(z3c.form.interfaces.ISequenceWidget): 
+class IKeywordWidget(z3c.form.interfaces.ISequenceWidget):
     """A keyword widget.
     """
 
@@ -12,3 +12,7 @@ class IInAndOutKeywordWidget(z3c.form.interfaces.IOrderedSelectWidget):
 class IKeywordCollection(zope.schema.interfaces.ICollection):
     """ Marker interfaces for keyword collections
     """
+
+    index_name = zope.schema.TextLine(title=u"Index name",
+                                      description=u"Name of the catalog index "
+                                                  u"for the values of this field")
