@@ -4,11 +4,14 @@ Changelog
 1.3 - unreleased
 ----------------
 
-- made it work in Plone 4.3: fixed a problemin vocabulary creation in 
+- Added a handler so that it can be used in supermodels.
+  [thomasdesvenain]
+
+- made it work in Plone 4.3: fixed a problem in vocabulary creation in
   combination with non-ascii.
   [jensens]
 
-- modernized test setup 
+- modernized test setup
   [jensens]
 
 1.2 - 2012-03-19
